igw.tf
resource "aws_internet_gateway" "mygw" {
    vpc_id = aws_vpc.myvpc.id

tags = {
  Name="mygw"
    }
  }
