subnet.tf
resource "aws_subnet" "public" {
    vpc_id = aws_vpc.myvpc.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1a"
    map_public_ip_on_launch = true
tags = {
  Name = "public"
    }
}

resource "aws_subnet" "private" {
    vpc_id = aws_vpc.myvpc.id
    cidr_block = "10.0.2.0/24"
    availability_zone= "us-east-1b"
tags = {
  Name = "private"
    }
}
