vpc.tf
resource "aws_vpc" "myvpc" {
    cidr_block = "10.0.0.0/16"

tags={
    Name = "myvpc"
}
}
